--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
 
     </style>
 </head>
+#sized-pic {
+    width: 50px;
+    height: 60px;
+}
 
+#rounded-pic {
+    border-radius: 15px;
+}
+
+#circle-pic {
+    border-radius: 50px;
 <body>
     <img id="sized-pic" src="https://picsum.photos/300" 
         alt="random pic">
