Update index.html check

--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     </style>
 </head>
 #sized-pic {
-    width: 60px;
-    height: 50px;
+    width: 50px;
+    height: 60px;
+}
+
+#scaled-pic {
+    width:50px;
+
 }
 
 #rounded-pic {
