--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </style>
 </head>
 #sized-pic {
-    width: 50%;
+    width: 50px;
     height: 60px;
 }
 
@@ -16,7 +16,7 @@
 }
 
 #rounded-pic {
-    border-radius: 15px;
+    border-radius: 25px;
 }
 
 #circle-pic {
