--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 #circle-pic {
     border-radius: 50%; 
 }
+<style>
 <body>
     <img id="sized-pic" src="https://picsum.photos/300" 
         alt="random pic">
