--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     border-radius: 50%; 
 }
  <style>
+<head>
 <body>
     <img id="sized-pic" src="https://picsum.photos/300" 
         alt="random pic">
