--- a/index.html
+++ b/index.html
@@ -3,21 +3,16 @@
 <head>
     <title>Image Formatting</title>
 <style>
-</head>
-#sized-pic {
-    width: 50px;
-    height: 60px;
-}
-
-#rounded-pic {
+    #sized-pic {
+    width: 50;
+    height: 60;
+    }
+    #rounded-pic {
     border-radius: 15px;
-}
-
-#circle-pic {
-    border-radius: 50%; 
-}
- <style>
-    <head>
+    }
+    #circle-pic {
+        border-radius: 50%;
+    }
 <body>
     <img id="sized-pic" src="https://picsum.photos/300" 
         alt="random pic">
