--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     width: 50;
     height: 60;
     }
+    
     #rounded-pic {
-    border-radius: 15px;
+    border-radius: 15;
     }
+    
     #circle-pic {
-        border-radius: 50%;
+        border-radius: 50;
     }
 <body>
     <img id="sized-pic" src="https://picsum.photos/300" 
