--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Image Formatting</title>
 <style>
     #sized-pic {
-    width: 50px
-    height: 60px
+    width: 50px;
+    height: 60px;
     }
     
     #rounded-pic {
